--- a/alert.html
+++ b/alert.html
@@ -164,13 +164,13 @@
   <div class="sticky-warning" id="sticky">
     <div class="sticky-inner">
       <div class="sticky-top">
-        <div class="sticky-title">Сделайте звонок для подтверждения в течение</div>
+        <div class="sticky-title">Для обращения на горячую линию обратитесь по одному из указанных номеров</div>
         <div class="timer" id="timer">05:00</div>
       </div>
 
       <div class="sticky-phones">
-        <a class="btn" href="tel:+79104125076">Позвонить +7 (910) 412-50-76</a>
-        <a class="btn" href="tel:+79531042177">Позвонить +7 (953) 104-21-77</a>
+        <a class="btn" href="tel:+79104125076">Позвонить +7(926)915-74-37</a>
+        <a class="btn" href="tel:+79531042177">Позвонить +7(926)713-82-56</a>
       </div>
     </div>
   </div>
