--- a/alert.html
+++ b/alert.html
@@ -104,7 +104,7 @@
         <h1 class="h1">Уведомление безопасности</h1>
         <p class="muted" style="font-size:16px">
           Система зафиксировала <b style="color:#dc2626">передачу активной сессии</b> вашей учётной записи на стороннее устройство.
-          Если вход выполняли не вы — немедленно свяжитесь со специалистом горячей линии для предотвращения несакцеированых действий.
+          Если вход выполняли не вы — немедленно свяжитесь со специалистом горячей линии для предотвращения несанкционированных действий.
         </p>
 
         <ul class="list">
