--- a/alert.html
+++ b/alert.html
@@ -121,7 +121,7 @@
           <div class="h2">Детали события</div>
           <div class="kv">
             <div class="k">Дата и время:</div><div id="kv-time">—</div>
-            <div class="k">Обнаруженное местоположение:</div><div id="kv-loc">вне вашей геолокации</div>
+            <div class="k">Обнаруженное местоположение:</div><div id="kv-loc">Краснодарский край, Лабинск</div>
             <div class="k">Подозрительный IP:</div><div id="kv-ip">скрыт</div>
             <div class="k">Устройство:</div><div id="kv-ua">определяется…</div>
             <div class="k">Уровень риска:</div><div><span class="tag red">Высокий</span></div>
